tests/parser/should_pass/negated_asserts.csp
assert
    {- why? -}
    STOP [T=  STOP

assert not STOP [T= STOP

assert
    -- testing 1 2 3
    not
    -- testing again really
    {- really testing



    -}
    STOP [T= STOP
