tests/parser/should_fail/let_timed_assert.csp
P =
    let
        Timed (\ _ @ 1) {
            assert STOP [T= STOP
        }
    within P
